# rust

./: .editorconfig  .gitignore  .gitmodules  .ignore  .markdownlint.yaml  .mdlrc  .shellcheckrc  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SETUP.md  config.json  count_ignores.sh  justfile  mise.toml  problem_ordering.md  problems.md  supported_crates
.github/: CODEOWNERS  labels.yml
_test/: WINDOWS_README.md  bootstrap.sh  cargo_clean_all.sh  check-configlet-fmt.sh  check-exercise-crate.sh  check-exercises-for-authors.sh  check-exercises.sh  check-stubs.sh  check-uuids.sh  check_exercises.sh  check_exercises_for_authors.sh  check_uuids.sh  count-ignores.sh  count_ignores.sh  ensure-lib-src-rs-exist.sh  ensure-readmes-are-updated.sh  ensure-stubs-compile.sh  ensure_lib_src_rs_exist.sh  ensure_stubs_compile.sh  tournament_setup.sh  verify-exercise-difficulties.sh
allergies/: example.rs
anagram/: Cargo.toml  anagram_test.rs  example.rs
beer-song/: Cargo.toml  beer-song_test.rs  example.rs
bob/: Cargo.toml  bob_test.rs  example.rs
circular-buffer/: example.rs
concepts/: planned
config/: exercise-readme-insert.md  exercise_readme.go.tmpl  maintainers.json
custom-set/: Cargo.toml  custom-set_test.rs  example.rs
dev/crates/exercise-config/: Cargo.toml
dev/crates/exercise-config/src/: lib.rs
dev/crates/exercise-config/tests/: count_ignores.rs  deserialize.rs
dev/crates/repo-conventions/: Cargo.toml
dev/crates/repo-conventions/src/: lib.rs
dev/crates/repo-conventions/tests/: bash_scripts.rs  no_authors_in_cargo_toml.rs  trailing_whitespace.rs
difference-of-squares/: example.rs
docs/: ABOUT.md  CONTRIBUTING.md  EXERCISE_README_INSERT.md  INSTALLATION.md  LEARNING.md  RESOURCES.md  TESTS.md  config.json  maintaining.md
dominoes/: Cargo.toml  dominoes_test.rs  example.rs
etl/: Cargo.toml  example.rs
exercise/: Cargo.toml
exercises/: TRACK_HINTS.md
exercises/concept/resistor-color/: Cargo.toml
exercises/concept/resistor-color/.docs/: hints.md  instructions.md  introduction.md
exercises/concept/resistor-color/.meta/: config.json  exemplar.rs
exercises/concept/resistor-color/src/: lib.rs
exercises/concept/resistor-color/tests/: resistor-color.rs
exercises/macros/tests/invalid/: Cargo.toml  comma-sep.rs  comma-sep.stderr  double-commas.rs  double-commas.stderr  leading-comma.rs  leading-comma.stderr  no-comma.rs  only-arrow.rs  only-arrow.stderr  only-comma.rs  only-comma.stderr  single-argument.rs  single-argument.stderr  triple-arguments.rs  triple-arguments.stderr  two-arrows.rs  two-arrows.stderr
exercises/practice/alphametics/: Cargo-example.toml  Cargo.toml
exercises/practice/alphametics/.meta/: Cargo-example.toml  config.json  example.rs  test_template.tera  tests.toml
exercises/practice/alphametics/src/: lib.rs
exercises/practice/alphametics/tests/: alphametics.rs
exercises/practice/doubly-linked-list/: Cargo.toml  example.rs
exercises/practice/doubly-linked-list/.docs/: hints.md  instructions.md
exercises/practice/doubly-linked-list/.meta/: ALLOWED_TO_NOT_COMPILE  config.json  description.md  example.rs
exercises/practice/doubly-linked-list/src/: lib.rs  pre_implemented.rs
exercises/practice/doubly-linked-list/tests/: doubly_linked_list.rs  step_4_leak_test_1.rs  step_4_leak_test_2.rs
exercises/practice/macros/tests/invalid/: Cargo.toml  double-commas.rs  leading-comma.rs  missing-argument.rs  triple_arguments.rs  two-arrows.rs
exercises/practice/robot-name/: Cargo.toml
exercises/practice/robot-name/.docs/: instructions.append.md
exercises/practice/robot-name/.meta/: Cargo-example.toml  config.json  example.rs
exercises/practice/robot-name/src/: lib.rs
exercises/practice/robot-name/tests/: robot-name.rs  robot_name.rs
gigasecond/: README.md
grade-school/: Cargo.toml  example.rs  grade-school_test.rs  school.rs
hello-world/: GETTING_STARTED.md  example.rs
init_exercise/: Cargo.toml
leap/: Cargo.toml  example.rs  leap_test.rs
minesweeper/: example.rs
nucleotide-codons/: example.rs
nucleotide-count/: Cargo.toml  (+2 more)
rust-tooling/: Cargo.toml
rust-tooling/ci-tests/: Cargo.toml
rust-tooling/ci-tests/src/: lib.rs
rust-tooling/ci-tests/tests/: additional_tests_are_documented.rs  bash_script_conventions.rs  count_ignores.rs  difficulties.rs  docs_are_valid.rs  no_authors_in_cargo_toml.rs  no_trailing_whitespace.rs  no_underscore_prefixed_idents.rs  stubs_are_warning_free.rs
rust-tooling/generate/: Cargo.toml
rust-tooling/generate/src/: cli.rs  custom_filters.rs  exercise_generation.rs  lib.rs  main.rs
rust-tooling/generate/templates/: default_test_template.tera
rust-tooling/generate/tests/: tera_templates_are_in_sync.rs
rust-tooling/generator/: Cargo.toml
rust-tooling/generator/src/: exercise_generation.rs  lib.rs  main.rs
rust-tooling/models/: Cargo.toml
rust-tooling/models/src/: exercise_config.rs  lib.rs  problem_spec.rs  track_config.rs
rust-tooling/rust-tooling/: Cargo.toml
rust-tooling/rust-tooling/src/: default_test_template.tera  exercise_config.rs  exercise_generation.rs  fs_utils.rs  problem_spec.rs
rust-tooling/rust-tooling/tests/: bash_script_conventions.rs  count_ignores.rs  no_authors_in_cargo_toml.rs
rust-tooling/src/: bin_utils.rs  default_test_template.tera  exercise_config.rs  exercise_generation.rs  lib.rs  problem_spec.rs  track_config.rs
rust-tooling/tests/: bash_script_conventions.rs  count_ignores.rs  difficulties.rs  no_authors_in_cargo_toml.rs  no_trailing_whitespace.rs
rust-tooling/utils/: Cargo.toml
rust-tooling/utils/src/: fs.rs
util/exercise/: Cargo.toml
util/exercise/src/: errors.rs  fetch_configlet.rs  ir.rs  lib.rs  main.rs  paths.rs  structs.rs  utils.rs
util/exercise/src/cmd/: configure.rs  fetch_configlet.rs  generate.rs  mod.rs  update.rs
util/exercise/src/cmd/defaults/: description.md  gitignore
util/exercise/src/cmd/templates/: macros.rs  property_fn.rs  test_file.rs  test_fn.rs
util/exercise/src/templates/: README.md  description.md  example.rs  metadata.yml  property.tera  test.tera  tests.rs.tera
(+3321 files in other folders)
