[workspace]
resolver = "2"
members = ["dev/crates/*"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
exercise_config = { path = "dev/crates/exercise-config" }
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
track_config = { path = "dev/crates/track-config" }
walkdir = "2.3.3"
