[workspace]
resolver = "2"
members = ["dev/rust-tooling", "exercises/concept/*", "exercises/practice/*"]
# exclude those exercises that are allowed to not compile
exclude = [
    "exercises/practice/accumulate",
    "exercises/practice/clock",
    "exercises/practice/decimal",
    "exercises/practice/dot-dsl",
    "exercises/practice/luhn-from",
    "exercises/practice/luhn-trait",
    "exercises/practice/macros",
    "exercises/practice/xorcism",
    # this is not allowed to not compile, but it has benchmarks, which are a
    # nightly feature and rust-analyzer is not configured for that.
    "exercises/practice/parallel-letter-frequency",
]
