[package]
name = "exercism_tooling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
glob = "0.3.1"
inquire = "0.6.2"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tera = "1.19.1"
uuid = { version = "1.4.1", features = ["v4"] }
walkdir = "2.3.3"
