[package]
name = "models"
version = "0.1.0"
edition = "2024"
description = "Data structures for exercism stuff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.20"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
serde_repr = "0.1.17"
utils = { version = "0.1.0", path = "../utils" }
uuid = { version = "1.6.1", features = ["v4"] }
