[package]
name = "exercise"
version = "1.7.0"
description = "An utility for creating or updating the exercises on the Exercism Rust track"
edition = "2018"

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
failure_derive = "0.1.5"
flate2 = "1.0.6"
lazy_static = "1.2.0"
rayon = "1.0.3"
serde_json = "1.0.38"
tar = "0.4.20"
toml = "0.4.10"

[dependencies.uuid]
version = "0.7.2"
features = ["v5"]

[dependencies.reqwest]
version = "0.9.10"
default-features = false    
features = ["rustls-tls"]   
