[package]
name = "exercise_config"
version = "0.1.0"
edition.workspace = true

description = "De-/Serialization of <exercise>/.meta/config.json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
track_config.workspace = true
