[package]
name = "repo_conventions"
version = "0.1.0"
edition.workspace = true

description = "Tests to enforce various repository conventions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exercise_config.workspace = true
walkdir.workspace = true
