[package]
name = "doubly_linked_list"
version = "0.1.0"
edition = "2024"

# Not all libraries from crates.io are available in Exercism's test runner.
# The full list of available libraries is here:
# https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
[dependencies]

[features]
# check correct covariance and Send, Sync
advanced = []

[lints.clippy]
drop_non_drop = "allow" # tests call drop before students have implemented it
new_without_default = "allow"
