[package]
name = "robot_name"
version = "0.1.0"
edition = "2024"

# Not all libraries from crates.io are available in Exercism's test runner.
# The full list of available libraries is here:
# https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
[dependencies]
once_cell = "1.18"
rand = "0.8"

[lints.clippy]
new_without_default = "allow"
