#
# This Cargo.toml file is used by the simple-trybuild module.
# When adding a new file, please name the [[bin]] name to match the file
# it is used to produce an error message
#

[package]
name = "macros-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.macros]
path = "../../"
default-features = false

[[bin]]
name = "comma_sep"
path = "comma_sep.rs"

[[bin]]
name = "double_commas"
path = "double_commas.rs"

[[bin]]
name = "only_arrow"
path = "only_arrow.rs"

[[bin]]
name = "only_comma"
path = "only_comma.rs"

[[bin]]
name = "single_argument"
path = "single_argument.rs"

[[bin]]
name = "triple_arguments"
path = "triple_arguments.rs"

[[bin]]
name = "two_arrows"
path = "two_arrows.rs"

[[bin]]
name = "leading_comma"
path = "leading_comma.rs"

[[bin]]
name = "no_comma"
path = "no_comma.rs"

[[bin]]
name = "missing_argument"
path = "missing_argument.rs"
